# cmsplugin-pdfviewer

./: README.md  pyproject.toml  setup.py
cmsplugin_pdfviewer/: __init__.py  apps.py  cms_plugins.py  models.py
cmsplugin_pdfviewer/locale/en/LC_MESSAGES/: django.mo  django.po
cmsplugin_pdfviewer/locale/fr/LC_MESSAGES/: django.mo  django.po
cmsplugin_pdfviewer/migrations/: 0001_initial.py
cmsplugin_pdfviewer/static/css/cmsplugin_pdfviewer/: plugin.css
cmsplugin_pdfviewer/static/js/cmsplugin_pdfviewer/: l10n.js  pdf.worker.js  plugin.js  viewer.js
cmsplugin_pdfviewer/templates/cmsplugin_pdfviewer/: plugin.html
