[tool.poetry]
name = "cmsplugin-pdfviewer"
version = "1.0.1"
description = "PDF viewer plugin for Django-CMS"
authors = ["Naeka <contact@naeka.fr>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
django-cms = "^3.9.0"
South = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
